--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,62 @@
-version: "3"
+version: "3.7"
 
 services:
+  # image project
   php:
-    image: php:7.4-apache
-    container_name: meu-php
+    container_name: php-basico
+    build:
+      context: ./docker/php
+      dockerfile: Dockerfile
+    volumes:
+      - ./:/var/www
+      - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+    networks:
+      - setup-network
+
+  # nginx
+  nginx:
+    container_name: nginx-basico
+    build:
+      context: ./docker/nginx
+      dockerfile: Dockerfile
     ports:
-      - "8001:80"
+      - "8585:80"
       - "443:443"
     volumes:
-      - /home/coimbra/php:/var/www/html
-    links:
-      - db
+      - ./:/var/www
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - setup-network
 
-  db:
-    image: mysql:latest
-    container_name: meu-mysql-php
-    ports:
-      - "3310:3306"
-    volumes:
-      - /var/lib/mysql
+  #mysql
+  mysql:
+    container_name: setup-mysql-basico
+    image: mysql:5.7.22
     environment:
-      - MYSQL_ROOT_PASSWORD=root
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_USER: ${DB_USERNAME}
+    volumes:
+      - ./.docker/mysql/dbdata:/var/lib/mysql
+    ports:
+      - "3388:3306"
+    networks:
+      - setup-network
+
+  #phpmyadmin
+  phpmyadmin:
+    container_name: setup-phpmyadmin-basico
+    image: phpmyadmin:5.2
+    restart: always
+    ports:
+      - "8888:80"
+    environment:
+      PMA_HOST: setup-mysql-basico
+    depends_on:
+      - mysql
+    networks:
+      - setup-network
+networks:
+  setup-network:
+    driver: bridge
