--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,16 +31,17 @@ services:
   #mysql
   mysql:
     container_name: setup-mysql-basico
-    image: mysql:5.7.22
+    image: mysql:8.0
     environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_DATABASE: database
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_PASSWORD: root
+      MYSQL_USER: root
+      MYSQL_ROOT_HOST: "%"
     volumes:
       - ./.docker/mysql/dbdata:/var/lib/mysql
     ports:
-      - "3388:3306"
+      - "3307:3306"
     networks:
       - setup-network
 
@@ -50,7 +51,7 @@ services:
     image: phpmyadmin:5.2
     restart: always
     ports:
-      - "8888:80"
+      - "8181:80"
     environment:
       PMA_HOST: setup-mysql-basico
     depends_on:
