--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,8 +4,9 @@ server {
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/app;
+
     location ~ \.php$ {
-        try_files $uri =404;
+        try_files $uri /index.php?$query_string;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
@@ -13,8 +14,9 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri /index.php?$query_string;
         gzip_static on;
     }
 }
